--- a/src/Frisia.Solver/Frisia.Solver.csproj
+++ b/src/Frisia.Solver/Frisia.Solver.csproj
@@ -4,9 +4,18 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <PlatformTarget>x64</PlatformTarget>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="2.9.0" />
-    <PackageReference Include="z3x64win" Version="4.5.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="Microsoft.Z3">
+      <HintPath>..\..\..\..\..\..\Users\filip\.nuget\packages\z3x64win\4.5.0.1\lib\Microsoft.Z3.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
 </Project>
